--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -125,9 +125,10 @@ p {
 }
 
 blockquote {
-  padding: 0;
   font-style: italic;
-  text-align: center;
+  padding: 0 1em;
+  color: #6a737d;
+  border-left: .25em solid #dfe2e5;
 }
 
 figure {
